[package]
name = "remap-me"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = { git = "https://github.com/jmkl/rdev", features = ["unstable_grab"] }
serde = {version="1.0.218",features = ["derive"]}
serde_json = "1.0.139"
once_cell = "1.20.3"
crossbeam-channel = "0.5.14"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
] }
parking_lot = "0.12.3"

[dev-dependencies]
crossterm = "0.28.1"
